force-app/main/default/objects/LLC_BI__Rent_Roll__c/LLC_BI__Rent_Roll__c.object-meta.xml
<CustomObject>
    <description>This object stores rent roll data.</description>
    <label>Rent Roll</label>
    <nameField>
        <label>Rent Roll Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rent Rolls</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>