force-app/main/default/objects/LLC_BI__Rent_Roll__c/fields/LLC_BI__Bundle__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Bundle__c</fullName>
    <deleteConstraint>Cascade</deleteConstraint>
    <description>The system automatically populates this required lookup field to reference the related bundle.</description>
    <label>Bundle</label>
    <referenceTo>LLC_BI__Underwriting_Bundle__c</referenceTo>
    <relationshipLabel>Rent Rolls</relationshipLabel>
    <relationshipName>Rent_Rolls</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>