force-app/main/default/objects/LLC_BI__Rent_Roll__c/fields/LLC_BI__lookupKey__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__lookupKey__c</fullName>
    <description>The field typically contains an external identifier that is used to associate the record with its matching record in an external system. The field can also be used to efficiently associate related records, when importing data into nCino, without the need to know the internal ID for the record. By default, External ID is true.</description>
    <externalId>true</externalId>
    <label>lookupKey</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>