force-app/main/default/objects/LLC_BI__Rent_Roll__c/fields/LLC_BI__Rent_Roll_Summary__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Rent_Roll_Summary__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The system automatically populates a unique lookup key to indicate the rent roll summary.</description>
    <label>Rent Roll Summary</label>
    <referenceTo>LLC_BI__Rent_Roll_Summary__c</referenceTo>
    <relationshipLabel>Rent Rolls</relationshipLabel>
    <relationshipName>Rent_Rolls</relationshipName>
    <type>Lookup</type>
</CustomField>