force-app/main/default/objects/LLC_BI__Rent_Roll__c/fields/LLC_BI__Source_Rent_Roll__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Source_Rent_Roll__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The system automatically populates this optional lookup field to reference the source rent roll.</description>
    <label>Source Rent Roll</label>
    <referenceTo>LLC_BI__Rent_Roll__c</referenceTo>
    <relationshipLabel>Cloned Rent Rolls</relationshipLabel>
    <relationshipName>Cloned_Rent_Rolls</relationshipName>
    <type>Lookup</type>
</CustomField>